--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "willhalluk-ghost-preview-theme",
   "description": "A preview theme for Ghost CMS + JAMStack willhall.uk site.",
   "demo": "https://willhall.uk",
-  "version": "3.0.12",
+  "version": "1.0.0",
   "engines": {
     "ghost": ">=3.0.0",
     "ghost-api": "v3"
@@ -37,10 +37,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/TryGhost/Casper.git"
+    "url": "https://github.com/WillTheVideoMan/willhalluk-ghost-preview-theme.git"
   },
-  "bugs": "https://github.com/TryGhost/Casper/issues",
-  "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
+  "bugs": "https://github.com/WillTheVideoMan/willhalluk-ghost-preview-theme/issues",
+  "contributors": "https://github.com/WillTheVideoMan/willhalluk-ghost-preview-theme/graphs/contributors",
   "devDependencies": {
     "@tryghost/release-utils": "0.5.0",
     "autoprefixer": "9.7.6",
